# KVP10k

./: README.md  benchmark.py  count_lines.py  dataset.py  dataset_statistics.py  download_dataset.py  inference.py  model.py  pyproject.toml  train.py  visualize_annotation.py  visualize_gt.py
benchmark/: dataset_loader.py  metrics_calculator.py
config/: base.yaml  kvp.yaml  kvp_inference.yaml
utils/: config.py  dataset_utils.py  prompt_utils.py  response_handler.py  utils.py
utils/annotation_utils/: annotation_reader.py  annotation_visualizer.py  labels.py  split_statistics.py
utils/gt_utils/: gt_visualizer.py  ocr_annotation_fusion.py
utils/huggingface_utils/: download_and_prepare_dataset.py  jsons_to_parquets.py  parquets_to_jsons.py
utils/lmdx/: lmdx_creator.py  lmdx_sentences_holder.py  lmdx_utils.py
utils/lmdx/block_structure_analysis/: block_structure.py  block_structure_config.json
utils/lmdx/block_structure_analysis/core/: block_structure_analyzer_iou.py
utils/safe_load/: json_safe_loader.py  output_safe_loader.py
utils/tfrq_utils/: tfrq.py
utils/visualization/: common.py
